2009-04-03  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amsamba.pl: Allow empty password.
	* perl/Amanda/Util.swg: Small fix in skip_quoted_string.
	* installcheck/Amanda_Util.pl: Check skip_quoted_string fix.

2009-04-02  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: prefix error message with "backup failed:"
	  if a dump to holding disk failed.

2009-04-02  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: Print a taper status.
	* server-src/taper.c: Quote TAPE-ERROR reply.

2009-04-02  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amsamba.8.xml: clarify "CIFS host" vs. "client"

2009-04-02  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amsamba.pl: Typo.

2009-04-01  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/s3-device.c: always send errors from setup_handle

2009-04-01  Nikolas Coukouma <atrus@zmanda.com>
	* device-src/s3-device.c: don't clobber errors from setup_handle

2009-04-01  Nikolas Coukouma <atrus@zmanda.com>
	* NEWS: Note change to Amazon S3, add ampgsql

2009-03-31  Jean-Louis Martineau <martineau@zmanda.com>
        * server-src/amcheck.c: Set l on error path.

2009-03-31  Nikolas Coukouma <atrus@zmanda.com>
	* device-src/s3.c: don't send empty location constraint,
	  allocate error messages, fix constraint check in case of wildcard
	* installcheck/Amanda_Device.pl: actually test location constraints

2009-03-31  Nikolas Coukouma <atrus@zmanda.com>
	* application-src/ampgsql.pl: add newline to end of index entry

2009-03-31  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amsamba.pl: Set $self->{mesgout} before calling
	                              method that use it.

2009-03-31  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/Makefile.am: Remove amgtar_perl.
	* application-src/amgtar_perl.pl: Remove file.

2009-03-30  Jean-Louis Martineau <martineau@zmanda.com>